# notif

./: .env.example  .gitignore  Cargo.toml  README.md  postgrest.conf  setup.sh
.github/workflows/: deploy.yml
dashboard_static/: chat-demo.html  docs.html  index.html  login.html  notifmoo-example.html  notifmoo.js  register.html
examples/: ws_client.html
migrations/: 001_init_schema.sql  002_postgrest_roles.sql
src/: lib.rs  main.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  service.rs
src/config/: mod.rs
src/dashboard/: handlers.rs  mod.rs
src/db/: mod.rs  pool.rs  repositories.rs
src/error/: mod.rs
src/handlers/: http.rs  mod.rs  ws.rs
src/middleware/: auth.rs  mod.rs
src/models/: channel.rs  event.rs  mod.rs  presence.rs
src/repositories/: mod.rs  redis_repo.rs
src/services/: auth.rs  channel.rs  mod.rs  presence.rs
tests/: integration.rs
