[package]
name = "notif"
version = "0.1.0"
edition = "2021"
description = "Real-time push notification system like Pusher (Rust)"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
